--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -1934,20 +1934,20 @@ msgstr "Gebühren"
 
 #: src/components/routes/event/orders.tsx:109
 msgid "Filter Orders"
-msgstr ""
+msgstr "Bestellungen filtern"
 
 #: src/components/common/FilterModal/index.tsx:75
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters"
-msgstr ""
+msgstr "Filter"
 
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters ({activeFilterCount})"
-msgstr ""
+msgstr "Filter ({activeFilterCount})"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:206
 msgid "First Invoice Number"
-msgstr ""
+msgstr "Erste Rechnungsnummer"
 
 #: src/components/common/QuestionsTable/index.tsx:206
 #: src/components/modals/CreateAttendeeModal/index.tsx:118
@@ -2234,11 +2234,11 @@ msgstr "Ich stimme den <0>Allgemeinen Geschäftsbedingungen</0> zu"
 
 #: src/components/routes/product-widget/Payment/index.tsx:106
 msgid "I would like to pay using an offline method"
-msgstr ""
+msgstr "Ich möchte mit einer Offline-Methode bezahlen"
 
 #: src/components/routes/product-widget/Payment/index.tsx:107
 msgid "I would like to pay using an online method (credit card etc.)"
-msgstr ""
+msgstr "Ich möchte mit einer Online-Methode (z. B. Kreditkarte) bezahlen"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:278
 msgid "If a new tab did not open, please  <0><1>{0}</1>.</0>"
@@ -2250,11 +2250,11 @@ msgstr "Wenn keine neue Registerkarte geöffnet wurde, <0><1>{0}</1>.</0>"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:149
 msgid "If blank, the address will be used to generate a Google Mapa link"
-msgstr ""
+msgstr "Wenn leer, wird die Adresse verwendet, um einen Google Maps-Link zu erstellen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:158
 msgid "If enabled, check-in staff can either mark attendees as checked in or mark the order as paid and check in the attendees. If disabled, attendees associated with unpaid orders cannot be checked in."
-msgstr ""
+msgstr "Wenn aktiviert, kann das Check-in-Personal Teilnehmer entweder als eingecheckt markieren oder die Bestellung als bezahlt markieren und die Teilnehmer einchecken. Wenn deaktiviert, können Teilnehmer mit unbezahlten Bestellungen nicht eingecheckt werden."
 
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:76
 msgid "If enabled, the organizer will receive an email notification when a new order is placed"
@@ -2355,15 +2355,15 @@ msgstr "Benutzer einladen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:252
 msgid "Invoice Notes"
-msgstr ""
+msgstr "Rechnungsnotizen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:197
 msgid "Invoice Numbering"
-msgstr ""
+msgstr "Rechnungsnummerierung"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:177
 msgid "Invoice Settings"
-msgstr ""
+msgstr "Rechnungseinstellungen"
 
 #: src/components/modals/RefundOrderModal/index.tsx:115
 msgid "Issue refund"
@@ -2457,7 +2457,7 @@ msgstr "Erfahren Sie mehr über Stripe"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:191
 msgid "Leave blank to use the default word \"Invoice\""
-msgstr ""
+msgstr "Leer lassen, um das Standardwort \"Rechnung\" zu verwenden"
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
@@ -2496,7 +2496,7 @@ msgstr "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ich habe das El
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:170
 msgid "Make billing address mandatory during checkout"
-msgstr ""
+msgstr "Rechnungsadresse beim Checkout erforderlich machen"
 
 #: src/components/forms/QuestionForm/index.tsx:213
 msgid "Make this question mandatory"
@@ -2523,11 +2523,11 @@ msgstr "Veranstaltung verwalten"
 
 #: src/components/common/OrdersTable/index.tsx:146
 msgid "Manage order"
-msgstr ""
+msgstr "Bestellung verwalten"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:99
 msgid "Manage payment and invoicing settings for this event."
-msgstr ""
+msgstr "Zahlungs- und Rechnungseinstellungen für diese Veranstaltung verwalten."
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:106
 #~ msgid "Manage products"
@@ -2580,7 +2580,7 @@ msgstr "Teilnehmer manuell hinzufügen"
 
 #: src/components/common/OrdersTable/index.tsx:157
 msgid "Mark as paid"
-msgstr ""
+msgstr "Als bezahlt markieren"
 
 #: src/components/forms/ProductForm/index.tsx:383
 msgid "Maximum Per Order"
@@ -2768,7 +2768,7 @@ msgstr "Keine Ereignisse zum Anzeigen"
 
 #: src/components/common/FilterModal/index.tsx:230
 msgid "No filters available"
-msgstr ""
+msgstr "Keine Filter verfügbar"
 
 #: src/components/common/MessageList/index.tsx:59
 msgid "No messages to show"
@@ -2780,7 +2780,7 @@ msgstr "Keine Bestellungen anzuzeigen"
 
 #: src/components/routes/product-widget/Payment/index.tsx:76
 msgid "No payment methods are currently available. Please contact the event organizer for assistance."
-msgstr ""
+msgstr "Derzeit sind keine Zahlungsmethoden verfügbar. Bitte wenden Sie sich an den Veranstalter, um Unterstützung zu erhalten."
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:39
 msgid "No Payment Required"
@@ -2879,35 +2879,35 @@ msgstr "Jetzt erstellen wir Ihr erstes Event"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:217
 msgid "Number of days allowed for payment (leave blank to omit payment terms from invoices)"
-msgstr ""
+msgstr "Anzahl der für die Zahlung zulässigen Tage (leer lassen, um Zahlungsbedingungen auf Rechnungen wegzulassen)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:199
 msgid "Number Prefix"
-msgstr ""
+msgstr "Nummernpräfix"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:145
 msgid "Offline orders are not reflected in event statistics until the order is marked as paid."
-msgstr ""
+msgstr "Offline-Bestellungen werden in der Veranstaltungsstatistik erst berücksichtigt, wenn die Bestellung als bezahlt markiert wurde."
 
 #: src/components/routes/product-widget/Payment/index.tsx:66
 msgid "Offline payment failed. Please try again or contact the event organizer."
-msgstr ""
+msgstr "Offline-Zahlung fehlgeschlagen. Bitte versuchen Sie es erneut oder kontaktieren Sie den Veranstalter."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:151
 msgid "Offline Payment Instructions"
-msgstr ""
+msgstr "Anweisungen für Offline-Zahlungen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:90
 msgid "Offline Payments"
-msgstr ""
+msgstr "Offline-Zahlungen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:139
 msgid "Offline Payments Information"
-msgstr ""
+msgstr "Informationen zu Offline-Zahlungen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:134
 msgid "Offline Payments Settings"
-msgstr ""
+msgstr "Einstellungen für Offline-Zahlungen"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:69
 msgid "On sale"
@@ -2968,11 +2968,11 @@ msgstr "Option {i}"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:253
 msgid "Optional additional information to appear on all invoices (e.g., payment terms, late payment fees, return policy)"
-msgstr ""
+msgstr "Optionale zusätzliche Informationen, die auf allen Rechnungen erscheinen (z. B. Zahlungsbedingungen, Gebühren für verspätete Zahlungen, Rückgaberichtlinien)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:200
 msgid "Optional prefix for invoice numbers (e.g., INV-)"
-msgstr ""
+msgstr "Optionales Präfix für Rechnungsnummern (z. B. INV-)"
 
 #: src/components/forms/QuestionForm/index.tsx:28
 msgid "Options"
@@ -3018,11 +3018,11 @@ msgstr "Die Bestellung wurde storniert und der Bestellinhaber wurde benachrichti
 
 #: src/components/common/OrdersTable/index.tsx:82
 msgid "Order marked as paid"
-msgstr ""
+msgstr "Bestellung als bezahlt markiert"
 
 #: src/components/modals/ManageOrderModal/index.tsx:92
 msgid "Order Notes"
-msgstr ""
+msgstr "Bestellnotizen"
 
 #: src/components/common/QuestionsTable/index.tsx:292
 #: src/components/common/QuestionsTable/index.tsx:334
@@ -3035,7 +3035,7 @@ msgstr "Bestellnummer"
 
 #: src/components/routes/event/orders.tsx:45
 msgid "Order Status"
-msgstr ""
+msgstr "Bestellstatus"
 
 #: src/components/layouts/Checkout/CheckoutSidebar/index.tsx:28
 #: src/components/modals/ManageOrderModal/index.tsx:105
@@ -3058,15 +3058,15 @@ msgstr "Aufträge"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:235
 msgid "Organization Address"
-msgstr ""
+msgstr "Organisationsadresse"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:226
 msgid "Organization Details"
-msgstr ""
+msgstr "Organisationsdetails"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:228
 msgid "Organization Name"
-msgstr ""
+msgstr "Organisationsname"
 
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
@@ -3173,15 +3173,15 @@ msgstr "Zahlung"
 
 #: src/components/routes/event/Settings/index.tsx:63
 msgid "Payment & Invoicing"
-msgstr ""
+msgstr "Zahlung & Rechnungsstellung"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:98
 msgid "Payment & Invoicing Settings"
-msgstr ""
+msgstr "Einstellungen für Zahlung & Rechnungsstellung"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:216
 msgid "Payment Due Period"
-msgstr ""
+msgstr "Zahlungsfrist"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:41
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:64
@@ -3191,15 +3191,15 @@ msgstr "Bezahlung fehlgeschlagen"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:228
 #: src/components/routes/product-widget/Payment/PaymentMethods/Offline/index.tsx:14
 msgid "Payment Instructions"
-msgstr ""
+msgstr "Zahlungsanweisungen"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:105
 msgid "Payment Methods"
-msgstr ""
+msgstr "Zahlungsmethoden"
 
 #: src/components/common/OrderDetails/index.tsx:75
 msgid "Payment provider"
-msgstr ""
+msgstr "Zahlungsanbieter"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:42
 msgid "Payment Received"
@@ -3215,7 +3215,7 @@ msgstr "Zahlung erfolgreich abgeschlossen!"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:214
 msgid "Payment Terms"
-msgstr ""
+msgstr "Zahlungsbedingungen"
 
 #: src/components/forms/PromoCodeForm/index.tsx:51
 #: src/components/forms/TaxAndFeeForm/index.tsx:27
@@ -3609,7 +3609,7 @@ msgstr "Berichte"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:169
 msgid "Require Billing Address"
-msgstr ""
+msgstr "Rechnungsadresse erforderlich"
 
 #: src/components/routes/event/GettingStarted/index.tsx:140
 msgid "Resend confirmation email"
@@ -3641,7 +3641,7 @@ msgstr "Erneut senden..."
 
 #: src/components/common/FilterModal/index.tsx:249
 msgid "Reset"
-msgstr ""
+msgstr "Zurücksetzen"
 
 #: src/components/routes/auth/ResetPassword/index.tsx:62
 msgid "Reset password"
@@ -3758,7 +3758,7 @@ msgstr "Suchen Sie nach Namen, E-Mail oder Bestellnummer ..."
 
 #: src/components/layouts/CheckIn/index.tsx:361
 msgid "Search by name, order #, attendee # or email..."
-msgstr ""
+msgstr "Suchen nach Name, Bestellnummer, Teilnehmernummer oder E-Mail..."
 
 #: src/components/routes/event/promo-codes.tsx:34
 msgid "Search by name..."
@@ -3810,7 +3810,7 @@ msgstr "Sekundäre Textfarbe"
 
 #: src/components/common/FilterModal/index.tsx:150
 msgid "Select {0}"
-msgstr ""
+msgstr "{0} auswählen"
 
 #: src/components/common/AttendeeCheckInTable/QrScanner.tsx:214
 msgid "Select Camera"
@@ -3924,7 +3924,7 @@ msgstr "Legen Sie einen Mindestpreis fest und lassen Sie die Nutzer mehr zahlen,
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:207
 msgid "Set the starting number for invoice numbering. This cannot be changed once invoices have been generated."
-msgstr ""
+msgstr "Legen Sie die Startnummer für die Rechnungsnummerierung fest. Dies kann nicht geändert werden, sobald Rechnungen generiert wurden."
 
 #: src/components/routes/event/GettingStarted/index.tsx:86
 msgid "Set up your event"
@@ -4134,11 +4134,11 @@ msgstr "Status"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
-msgstr ""
+msgstr "Stripe"
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:48
 msgid "Stripe payments are not enabled for this event."
-msgstr ""
+msgstr "Stripe-Zahlungen sind für diese Veranstaltung nicht aktiviert."
 
 #: src/components/modals/SendMessageModal/index.tsx:180
 msgid "Subject"
@@ -4229,11 +4229,11 @@ msgstr "Verschiedene Einstellungen erfolgreich aktualisiert"
 
 #: src/components/modals/ManageOrderModal/index.tsx:74
 msgid "Successfully updated order"
-msgstr ""
+msgstr "Bestellung erfolgreich aktualisiert"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:74
 msgid "Successfully Updated Payment & Invoicing Settings"
-msgstr ""
+msgstr "Einstellungen für Zahlung & Rechnungsstellung erfolgreich aktualisiert"
 
 #: src/components/modals/EditProductModal/index.tsx:89
 msgid "Successfully updated product"
@@ -4261,7 +4261,7 @@ msgstr "Support-E-Mail"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
-msgstr ""
+msgstr "T-Shirt"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:12
 #: src/components/forms/TaxAndFeeForm/index.tsx:39
@@ -4280,11 +4280,11 @@ msgstr "Steuern & Gebühren"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:243
 msgid "Tax Details"
-msgstr ""
+msgstr "Steuerdetails"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:244
 msgid "Tax information to appear at the bottom of all invoices (e.g., VAT number, tax registration)"
-msgstr ""
+msgstr "Steuerinformationen, die unten auf allen Rechnungen erscheinen sollen (z. B. USt-Nummer, Steuerregistrierung)"
 
 #: src/components/common/TaxAndFeeList/index.tsx:36
 msgid "Tax or Fee deleted successfully"
@@ -4384,7 +4384,7 @@ msgstr "Eine Rückerstattung steht aus. Bitte warten Sie, bis der Vorgang abgesc
 
 #: src/components/common/OrdersTable/index.tsx:88
 msgid "There was an error marking the order as paid"
-msgstr ""
+msgstr "Beim Markieren der Bestellung als bezahlt ist ein Fehler aufgetreten"
 
 #: src/hooks/useFormErrorResponseHandler.tsx:28
 msgid "There was an error processing your request. Please try again."
@@ -4396,7 +4396,7 @@ msgstr "Beim Senden Ihrer Nachricht ist ein Fehler aufgetreten"
 
 #: src/components/layouts/CheckIn/index.tsx:166
 msgid "This attendee has an unpaid order."
-msgstr ""
+msgstr "Dieser Teilnehmer hat eine unbezahlte Bestellung."
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:61
 msgid "This category doesn't have any products yet."
@@ -4444,7 +4444,7 @@ msgstr "Dieses Event ist nicht verfügbar."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
 msgid "This information will be shown on the payment page, order summary page, and order confirmation email."
-msgstr ""
+msgstr "Diese Informationen werden auf der Zahlungsseite, der Bestellübersichtsseite und in der Bestellbestätigungs-E-Mail angezeigt."
 
 #: src/components/forms/ProductForm/index.tsx:138
 msgid "This is a general product, like a t-shirt or a mug. No ticket will be issued"
@@ -4795,7 +4795,7 @@ msgstr "Unbegrenzte Nutzung erlaubt"
 
 #: src/components/layouts/CheckIn/index.tsx:165
 msgid "Unpaid Order"
-msgstr ""
+msgstr "Unbezahlte Bestellung"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5032,11 +5032,11 @@ msgstr "Um welche Art von Frage handelt es sich?"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:182
 msgid "When enabled, invoices will be generated for ticket orders. Invoices will sent along with the order confirmation email. Attendees can also download their invoices from the order confirmation page."
-msgstr ""
+msgstr "Wenn aktiviert, werden Rechnungen für Ticketbestellungen erstellt. Rechnungen werden zusammen mit der Bestellbestätigungs-E-Mail gesendet. Teilnehmer können ihre Rechnungen auch von der Bestellbestätigungsseite herunterladen."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:141
 msgid "When offline payments are enabled, users will be able to complete their orders and receive their tickets. Their tickets will clearly indicate the order is not paid, and the check-in tool will notify the check-in staff if an order requires payment."
-msgstr ""
+msgstr "Wenn Offline-Zahlungen aktiviert sind, können Benutzer ihre Bestellungen abschließen und ihre Tickets erhalten. Ihre Tickets werden klar anzeigen, dass die Bestellung nicht bezahlt ist, und das Check-in-Tool wird das Check-in-Personal benachrichtigen, wenn eine Bestellung eine Zahlung erfordert."
 
 #: src/components/forms/CheckInListForm/index.tsx:59
 msgid "When should this check-in list expire?"
@@ -5133,11 +5133,11 @@ msgstr "Sie können den Produkttyp nicht ändern, da Teilnehmer mit diesem Produ
 
 #: src/components/layouts/CheckIn/index.tsx:119
 msgid "You cannot check in attendees with unpaid orders."
-msgstr ""
+msgstr "Sie können Teilnehmer mit unbezahlten Bestellungen nicht einchecken."
 
 #: src/components/layouts/CheckIn/index.tsx:144
 msgid "You cannot check in attendees with unpaid orders. This setting can be changed in the event settings."
-msgstr ""
+msgstr "Sie können Teilnehmer mit unbezahlten Bestellungen nicht einchecken. Diese Einstellung kann in den Veranstaltungsdetails geändert werden."
 
 #: src/components/common/ProductsTable/SortableCategory/index.tsx:40
 msgid "You cannot delete the last category."
@@ -5245,7 +5245,7 @@ msgstr "Sie müssen Ihr Konto verifizieren, bevor Sie Nachrichten senden können
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:143
 msgid "You will have to mark an order as paid manually. This can be done on the manage order page."
-msgstr ""
+msgstr "Sie müssen eine Bestellung manuell als bezahlt markieren. Dies kann auf der Bestellverwaltungsseite erfolgen."
 
 #: src/components/modals/CreateCheckInListModal/index.tsx:55
 msgid "You'll need a ticket before you can create a check-in list."
@@ -5305,7 +5305,7 @@ msgstr "Deine Bestellung wurde storniert"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:96
 msgid "Your order is awaiting payment 🏦"
-msgstr ""
+msgstr "Ihre Bestellung wartet auf Zahlung 🏦"
 
 #: src/components/common/OrdersTable/index.tsx:67
 msgid "Your orders will appear here once they start rolling in."
@@ -5342,7 +5342,7 @@ msgstr "Ihr Ticket für"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:335
 msgid "ZIP / Postal Code"
-msgstr ""
+msgstr "Postleitzahl"
 
 #: src/components/common/CheckoutQuestion/index.tsx:167
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:137
@@ -5351,4 +5351,4 @@ msgstr "Postleitzahl"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:336
 msgid "ZIP or Postal Code"
-msgstr ""
+msgstr "Postleitzahl"
