--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -1934,20 +1934,20 @@ msgstr "Honorarios"
 
 #: src/components/routes/event/orders.tsx:109
 msgid "Filter Orders"
-msgstr ""
+msgstr "Filtrar pedidos"
 
 #: src/components/common/FilterModal/index.tsx:75
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters"
-msgstr ""
+msgstr "Filtros"
 
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters ({activeFilterCount})"
-msgstr ""
+msgstr "Filtros ({activeFilterCount})"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:206
 msgid "First Invoice Number"
-msgstr ""
+msgstr "Primer número de factura"
 
 #: src/components/common/QuestionsTable/index.tsx:206
 #: src/components/modals/CreateAttendeeModal/index.tsx:118
@@ -2234,11 +2234,11 @@ msgstr "Acepto los <0>términos y condiciones</0>"
 
 #: src/components/routes/product-widget/Payment/index.tsx:106
 msgid "I would like to pay using an offline method"
-msgstr ""
+msgstr "Me gustaría pagar utilizando un método offline"
 
 #: src/components/routes/product-widget/Payment/index.tsx:107
 msgid "I would like to pay using an online method (credit card etc.)"
-msgstr ""
+msgstr "Me gustaría pagar utilizando un método online (tarjeta de crédito, etc.)"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:278
 msgid "If a new tab did not open, please  <0><1>{0}</1>.</0>"
@@ -2250,11 +2250,11 @@ msgstr "Si no se abrió una nueva pestaña, <0><1>{0}</1>.</0>"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:149
 msgid "If blank, the address will be used to generate a Google Mapa link"
-msgstr ""
+msgstr "Si está en blanco, se usará la dirección para generar un enlace de Google Maps"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:158
 msgid "If enabled, check-in staff can either mark attendees as checked in or mark the order as paid and check in the attendees. If disabled, attendees associated with unpaid orders cannot be checked in."
-msgstr ""
+msgstr "Si está habilitado, el personal de registro puede marcar a los asistentes como registrados o marcar el pedido como pagado y registrar a los asistentes. Si está deshabilitado, los asistentes asociados con pedidos no pagados no pueden registrarse."
 
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:76
 msgid "If enabled, the organizer will receive an email notification when a new order is placed"
@@ -2355,15 +2355,15 @@ msgstr "Invitar usuario"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:252
 msgid "Invoice Notes"
-msgstr ""
+msgstr "Notas de la factura"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:197
 msgid "Invoice Numbering"
-msgstr ""
+msgstr "Numeración de facturas"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:177
 msgid "Invoice Settings"
-msgstr ""
+msgstr "Configuración de facturación"
 
 #: src/components/modals/RefundOrderModal/index.tsx:115
 msgid "Issue refund"
@@ -2457,7 +2457,7 @@ msgstr "Más información sobre la raya"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:191
 msgid "Leave blank to use the default word \"Invoice\""
-msgstr ""
+msgstr "Dejar en blanco para usar la palabra predeterminada \"Factura\""
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
@@ -2496,7 +2496,7 @@ msgstr "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat el
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:170
 msgid "Make billing address mandatory during checkout"
-msgstr ""
+msgstr "Hacer obligatoria la dirección de facturación durante el pago"
 
 #: src/components/forms/QuestionForm/index.tsx:213
 msgid "Make this question mandatory"
@@ -2523,11 +2523,11 @@ msgstr "Administrar evento"
 
 #: src/components/common/OrdersTable/index.tsx:146
 msgid "Manage order"
-msgstr ""
+msgstr "Gestionar pedido"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:99
 msgid "Manage payment and invoicing settings for this event."
-msgstr ""
+msgstr "Gestionar las configuraciones de pago y facturación para este evento."
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:106
 #~ msgid "Manage products"
@@ -2580,7 +2580,7 @@ msgstr "Agregar asistente manualmente"
 
 #: src/components/common/OrdersTable/index.tsx:157
 msgid "Mark as paid"
-msgstr ""
+msgstr "Marcar como pagado"
 
 #: src/components/forms/ProductForm/index.tsx:383
 msgid "Maximum Per Order"
@@ -2768,7 +2768,7 @@ msgstr "No hay eventos para mostrar"
 
 #: src/components/common/FilterModal/index.tsx:230
 msgid "No filters available"
-msgstr ""
+msgstr "No hay filtros disponibles"
 
 #: src/components/common/MessageList/index.tsx:59
 msgid "No messages to show"
@@ -2780,7 +2780,7 @@ msgstr "No hay pedidos para mostrar"
 
 #: src/components/routes/product-widget/Payment/index.tsx:76
 msgid "No payment methods are currently available. Please contact the event organizer for assistance."
-msgstr ""
+msgstr "No hay métodos de pago disponibles actualmente. Por favor, contacte al organizador del evento para obtener ayuda."
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:39
 msgid "No Payment Required"
@@ -2879,35 +2879,35 @@ msgstr "Ahora creemos tu primer evento."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:217
 msgid "Number of days allowed for payment (leave blank to omit payment terms from invoices)"
-msgstr ""
+msgstr "Número de días permitidos para el pago (dejar en blanco para omitir los términos de pago en las facturas)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:199
 msgid "Number Prefix"
-msgstr ""
+msgstr "Prefijo del número"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:145
 msgid "Offline orders are not reflected in event statistics until the order is marked as paid."
-msgstr ""
+msgstr "Los pedidos offline no se reflejan en las estadísticas del evento hasta que el pedido se marque como pagado."
 
 #: src/components/routes/product-widget/Payment/index.tsx:66
 msgid "Offline payment failed. Please try again or contact the event organizer."
-msgstr ""
+msgstr "El pago offline ha fallado. Por favor, inténtelo de nuevo o contacte al organizador del evento."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:151
 msgid "Offline Payment Instructions"
-msgstr ""
+msgstr "Instrucciones de pago offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:90
 msgid "Offline Payments"
-msgstr ""
+msgstr "Pagos offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:139
 msgid "Offline Payments Information"
-msgstr ""
+msgstr "Información de pagos offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:134
 msgid "Offline Payments Settings"
-msgstr ""
+msgstr "Configuración de pagos offline"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:69
 msgid "On sale"
@@ -2968,11 +2968,11 @@ msgstr "Opción {i}"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:253
 msgid "Optional additional information to appear on all invoices (e.g., payment terms, late payment fees, return policy)"
-msgstr ""
+msgstr "Información adicional opcional que aparecerá en todas las facturas (por ejemplo, términos de pago, cargos por pago atrasado, política de devoluciones)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:200
 msgid "Optional prefix for invoice numbers (e.g., INV-)"
-msgstr ""
+msgstr "Prefijo opcional para los números de factura (por ejemplo, INV-)"
 
 #: src/components/forms/QuestionForm/index.tsx:28
 msgid "Options"
@@ -3018,11 +3018,11 @@ msgstr "El pedido ha sido cancelado y se ha notificado al propietario del pedido
 
 #: src/components/common/OrdersTable/index.tsx:82
 msgid "Order marked as paid"
-msgstr ""
+msgstr "Pedido marcado como pagado"
 
 #: src/components/modals/ManageOrderModal/index.tsx:92
 msgid "Order Notes"
-msgstr ""
+msgstr "Notas del pedido"
 
 #: src/components/common/QuestionsTable/index.tsx:292
 #: src/components/common/QuestionsTable/index.tsx:334
@@ -3035,7 +3035,7 @@ msgstr "Pedir Referencia"
 
 #: src/components/routes/event/orders.tsx:45
 msgid "Order Status"
-msgstr ""
+msgstr "Estado del pedido"
 
 #: src/components/layouts/Checkout/CheckoutSidebar/index.tsx:28
 #: src/components/modals/ManageOrderModal/index.tsx:105
@@ -3058,15 +3058,15 @@ msgstr "Pedidos"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:235
 msgid "Organization Address"
-msgstr ""
+msgstr "Dirección de la organización"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:226
 msgid "Organization Details"
-msgstr ""
+msgstr "Detalles de la organización"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:228
 msgid "Organization Name"
-msgstr ""
+msgstr "Nombre de la organización"
 
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
@@ -3173,15 +3173,15 @@ msgstr "Pago"
 
 #: src/components/routes/event/Settings/index.tsx:63
 msgid "Payment & Invoicing"
-msgstr ""
+msgstr "Pago y facturación"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:98
 msgid "Payment & Invoicing Settings"
-msgstr ""
+msgstr "Configuración de pago y facturación"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:216
 msgid "Payment Due Period"
-msgstr ""
+msgstr "Período de vencimiento del pago"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:41
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:64
@@ -3191,15 +3191,15 @@ msgstr "Pago fallido"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:228
 #: src/components/routes/product-widget/Payment/PaymentMethods/Offline/index.tsx:14
 msgid "Payment Instructions"
-msgstr ""
+msgstr "Instrucciones de pago"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:105
 msgid "Payment Methods"
-msgstr ""
+msgstr "Métodos de pago"
 
 #: src/components/common/OrderDetails/index.tsx:75
 msgid "Payment provider"
-msgstr ""
+msgstr "Proveedor de pago"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:42
 msgid "Payment Received"
@@ -3215,7 +3215,7 @@ msgstr "¡Pago exitoso!"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:214
 msgid "Payment Terms"
-msgstr ""
+msgstr "Términos de pago"
 
 #: src/components/forms/PromoCodeForm/index.tsx:51
 #: src/components/forms/TaxAndFeeForm/index.tsx:27
@@ -3609,7 +3609,7 @@ msgstr "Informes"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:169
 msgid "Require Billing Address"
-msgstr ""
+msgstr "Requerir dirección de facturación"
 
 #: src/components/routes/event/GettingStarted/index.tsx:140
 msgid "Resend confirmation email"
@@ -3641,7 +3641,7 @@ msgstr "Reenviando..."
 
 #: src/components/common/FilterModal/index.tsx:249
 msgid "Reset"
-msgstr ""
+msgstr "Restablecer"
 
 #: src/components/routes/auth/ResetPassword/index.tsx:62
 msgid "Reset password"
@@ -3758,7 +3758,7 @@ msgstr "Busque por nombre, correo electrónico o número de pedido..."
 
 #: src/components/layouts/CheckIn/index.tsx:361
 msgid "Search by name, order #, attendee # or email..."
-msgstr ""
+msgstr "Buscar por nombre, número de pedido, número de asistente o correo electrónico..."
 
 #: src/components/routes/event/promo-codes.tsx:34
 msgid "Search by name..."
@@ -3810,7 +3810,7 @@ msgstr "Color de texto secundario"
 
 #: src/components/common/FilterModal/index.tsx:150
 msgid "Select {0}"
-msgstr ""
+msgstr "Seleccionar {0}"
 
 #: src/components/common/AttendeeCheckInTable/QrScanner.tsx:214
 msgid "Select Camera"
@@ -3924,7 +3924,7 @@ msgstr "Fijar un precio mínimo y dejar que los usuarios paguen más si lo desea
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:207
 msgid "Set the starting number for invoice numbering. This cannot be changed once invoices have been generated."
-msgstr ""
+msgstr "Establezca el número inicial para la numeración de facturas. Esto no se puede cambiar una vez que las facturas se hayan generado."
 
 #: src/components/routes/event/GettingStarted/index.tsx:86
 msgid "Set up your event"
@@ -4134,11 +4134,11 @@ msgstr "Estado"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
-msgstr ""
+msgstr "Stripe"
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:48
 msgid "Stripe payments are not enabled for this event."
-msgstr ""
+msgstr "Los pagos con Stripe no están habilitados para este evento."
 
 #: src/components/modals/SendMessageModal/index.tsx:180
 msgid "Subject"
@@ -4229,11 +4229,11 @@ msgstr "Configuraciones varias actualizadas exitosamente"
 
 #: src/components/modals/ManageOrderModal/index.tsx:74
 msgid "Successfully updated order"
-msgstr ""
+msgstr "Pedido actualizado con éxito"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:74
 msgid "Successfully Updated Payment & Invoicing Settings"
-msgstr ""
+msgstr "Configuraciones de pago y facturación actualizadas con éxito"
 
 #: src/components/modals/EditProductModal/index.tsx:89
 msgid "Successfully updated product"
@@ -4261,7 +4261,7 @@ msgstr "Correo electrónico de soporte"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
-msgstr ""
+msgstr "Camiseta"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:12
 #: src/components/forms/TaxAndFeeForm/index.tsx:39
@@ -4280,11 +4280,11 @@ msgstr "Impuestos y tarifas"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:243
 msgid "Tax Details"
-msgstr ""
+msgstr "Detalles de impuestos"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:244
 msgid "Tax information to appear at the bottom of all invoices (e.g., VAT number, tax registration)"
-msgstr ""
+msgstr "Información fiscal que aparecerá en la parte inferior de todas las facturas (por ejemplo, número de IVA, registro fiscal)"
 
 #: src/components/common/TaxAndFeeList/index.tsx:36
 msgid "Tax or Fee deleted successfully"
@@ -4384,7 +4384,7 @@ msgstr "Hay un reembolso pendiente. Espere a que se complete antes de solicitar 
 
 #: src/components/common/OrdersTable/index.tsx:88
 msgid "There was an error marking the order as paid"
-msgstr ""
+msgstr "Hubo un error al marcar el pedido como pagado"
 
 #: src/hooks/useFormErrorResponseHandler.tsx:28
 msgid "There was an error processing your request. Please try again."
@@ -4396,7 +4396,7 @@ msgstr "Hubo un error al enviar tu mensaje"
 
 #: src/components/layouts/CheckIn/index.tsx:166
 msgid "This attendee has an unpaid order."
-msgstr ""
+msgstr "Este asistente tiene un pedido no pagado."
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:61
 msgid "This category doesn't have any products yet."
@@ -4444,7 +4444,7 @@ msgstr "Este evento no está disponible."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
 msgid "This information will be shown on the payment page, order summary page, and order confirmation email."
-msgstr ""
+msgstr "Esta información se mostrará en la página de pago, la página de resumen del pedido y el correo electrónico de confirmación del pedido."
 
 #: src/components/forms/ProductForm/index.tsx:138
 msgid "This is a general product, like a t-shirt or a mug. No ticket will be issued"
@@ -4795,7 +4795,7 @@ msgstr "Usos ilimitados permitidos"
 
 #: src/components/layouts/CheckIn/index.tsx:165
 msgid "Unpaid Order"
-msgstr ""
+msgstr "Pedido no pagado"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5032,11 +5032,11 @@ msgstr "¿Qué tipo de pregunta es esta?"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:182
 msgid "When enabled, invoices will be generated for ticket orders. Invoices will sent along with the order confirmation email. Attendees can also download their invoices from the order confirmation page."
-msgstr ""
+msgstr "Cuando esté habilitado, se generarán facturas para los pedidos de boletos. Las facturas se enviarán junto con el correo electrónico de confirmación del pedido. Los asistentes también pueden descargar sus facturas desde la página de confirmación del pedido."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:141
 msgid "When offline payments are enabled, users will be able to complete their orders and receive their tickets. Their tickets will clearly indicate the order is not paid, and the check-in tool will notify the check-in staff if an order requires payment."
-msgstr ""
+msgstr "Cuando los pagos offline estén habilitados, los usuarios podrán completar sus pedidos y recibir sus boletos. Sus boletos indicarán claramente que el pedido no está pagado, y la herramienta de registro notificará al personal si un pedido requiere pago."
 
 #: src/components/forms/CheckInListForm/index.tsx:59
 msgid "When should this check-in list expire?"
@@ -5133,11 +5133,11 @@ msgstr "No puede cambiar el tipo de producto ya que hay asistentes asociados con
 
 #: src/components/layouts/CheckIn/index.tsx:119
 msgid "You cannot check in attendees with unpaid orders."
-msgstr ""
+msgstr "No puede registrar a asistentes con pedidos no pagados."
 
 #: src/components/layouts/CheckIn/index.tsx:144
 msgid "You cannot check in attendees with unpaid orders. This setting can be changed in the event settings."
-msgstr ""
+msgstr "No puede registrar a asistentes con pedidos no pagados. Esta configuración se puede cambiar en los ajustes del evento."
 
 #: src/components/common/ProductsTable/SortableCategory/index.tsx:40
 msgid "You cannot delete the last category."
@@ -5245,7 +5245,7 @@ msgstr "Debes verificar tu cuenta antes de poder enviar mensajes."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:143
 msgid "You will have to mark an order as paid manually. This can be done on the manage order page."
-msgstr ""
+msgstr "Deberá marcar un pedido como pagado manualmente. Esto se puede hacer en la página de gestión de pedidos."
 
 #: src/components/modals/CreateCheckInListModal/index.tsx:55
 msgid "You'll need a ticket before you can create a check-in list."
@@ -5305,7 +5305,7 @@ msgstr "Tu pedido ha sido cancelado"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:96
 msgid "Your order is awaiting payment 🏦"
-msgstr ""
+msgstr "Su pedido está en espera de pago 🏦"
 
 #: src/components/common/OrdersTable/index.tsx:67
 msgid "Your orders will appear here once they start rolling in."
@@ -5342,7 +5342,7 @@ msgstr "Tu billete para"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:335
 msgid "ZIP / Postal Code"
-msgstr ""
+msgstr "Código postal"
 
 #: src/components/common/CheckoutQuestion/index.tsx:167
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:137
@@ -5351,4 +5351,4 @@ msgstr "CP o Código Postal"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:336
 msgid "ZIP or Postal Code"
-msgstr ""
+msgstr "Código postal"
