--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -1934,20 +1934,20 @@ msgstr "Frais"
 
 #: src/components/routes/event/orders.tsx:109
 msgid "Filter Orders"
-msgstr ""
+msgstr "Filtrer les commandes"
 
 #: src/components/common/FilterModal/index.tsx:75
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters"
-msgstr ""
+msgstr "Filtres"
 
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters ({activeFilterCount})"
-msgstr ""
+msgstr "Filtres ({activeFilterCount})"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:206
 msgid "First Invoice Number"
-msgstr ""
+msgstr "Premier numéro de facture"
 
 #: src/components/common/QuestionsTable/index.tsx:206
 #: src/components/modals/CreateAttendeeModal/index.tsx:118
@@ -2234,11 +2234,11 @@ msgstr "J'accepte les <0>termes et conditions</0>"
 
 #: src/components/routes/product-widget/Payment/index.tsx:106
 msgid "I would like to pay using an offline method"
-msgstr ""
+msgstr "Je souhaite payer en utilisant une méthode hors ligne"
 
 #: src/components/routes/product-widget/Payment/index.tsx:107
 msgid "I would like to pay using an online method (credit card etc.)"
-msgstr ""
+msgstr "Je souhaite payer en utilisant une méthode en ligne (carte de crédit, etc.)"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:278
 msgid "If a new tab did not open, please  <0><1>{0}</1>.</0>"
@@ -2250,11 +2250,11 @@ msgstr "Si aucun nouvel onglet ne s'ouvre, veuillez <0><1>{0}</1>.</0>"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:149
 msgid "If blank, the address will be used to generate a Google Mapa link"
-msgstr ""
+msgstr "Si vide, l'adresse sera utilisée pour générer un lien Google Maps"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:158
 msgid "If enabled, check-in staff can either mark attendees as checked in or mark the order as paid and check in the attendees. If disabled, attendees associated with unpaid orders cannot be checked in."
-msgstr ""
+msgstr "Si activé, le personnel d'enregistrement peut marquer les participants comme enregistrés ou marquer la commande comme payée et enregistrer les participants. Si désactivé, les participants associés à des commandes impayées ne peuvent pas être enregistrés."
 
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:76
 msgid "If enabled, the organizer will receive an email notification when a new order is placed"
@@ -2355,15 +2355,15 @@ msgstr "Inviter un utilisateur"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:252
 msgid "Invoice Notes"
-msgstr ""
+msgstr "Notes de facture"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:197
 msgid "Invoice Numbering"
-msgstr ""
+msgstr "Numérotation des factures"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:177
 msgid "Invoice Settings"
-msgstr ""
+msgstr "Paramètres de facturation"
 
 #: src/components/modals/RefundOrderModal/index.tsx:115
 msgid "Issue refund"
@@ -2457,7 +2457,7 @@ msgstr "En savoir plus sur Stripe"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:191
 msgid "Leave blank to use the default word \"Invoice\""
-msgstr ""
+msgstr "Laisser vide pour utiliser le mot par défaut \"Facture\""
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
@@ -2496,7 +2496,7 @@ msgstr "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nom placerat el
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:170
 msgid "Make billing address mandatory during checkout"
-msgstr ""
+msgstr "Rendre l'adresse de facturation obligatoire lors du paiement"
 
 #: src/components/forms/QuestionForm/index.tsx:213
 msgid "Make this question mandatory"
@@ -2523,11 +2523,11 @@ msgstr "Gérer l'événement"
 
 #: src/components/common/OrdersTable/index.tsx:146
 msgid "Manage order"
-msgstr ""
+msgstr "Gérer la commande"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:99
 msgid "Manage payment and invoicing settings for this event."
-msgstr ""
+msgstr "Gérer les paramètres de paiement et de facturation pour cet événement."
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:106
 #~ msgid "Manage products"
@@ -2580,7 +2580,7 @@ msgstr "Ajouter manuellement un participant"
 
 #: src/components/common/OrdersTable/index.tsx:157
 msgid "Mark as paid"
-msgstr ""
+msgstr "Marquer comme payé"
 
 #: src/components/forms/ProductForm/index.tsx:383
 msgid "Maximum Per Order"
@@ -2768,7 +2768,7 @@ msgstr "Aucun événement à afficher"
 
 #: src/components/common/FilterModal/index.tsx:230
 msgid "No filters available"
-msgstr ""
+msgstr "Aucun filtre disponible"
 
 #: src/components/common/MessageList/index.tsx:59
 msgid "No messages to show"
@@ -2780,7 +2780,7 @@ msgstr "Aucune commande à afficher"
 
 #: src/components/routes/product-widget/Payment/index.tsx:76
 msgid "No payment methods are currently available. Please contact the event organizer for assistance."
-msgstr ""
+msgstr "Aucune méthode de paiement n'est actuellement disponible. Veuillez contacter l'organisateur de l'événement pour obtenir de l'aide."
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:39
 msgid "No Payment Required"
@@ -2879,35 +2879,35 @@ msgstr "Créons maintenant votre premier événement"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:217
 msgid "Number of days allowed for payment (leave blank to omit payment terms from invoices)"
-msgstr ""
+msgstr "Nombre de jours autorisés pour le paiement (laisser vide pour omettre les conditions de paiement sur les factures)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:199
 msgid "Number Prefix"
-msgstr ""
+msgstr "Préfixe de numéro"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:145
 msgid "Offline orders are not reflected in event statistics until the order is marked as paid."
-msgstr ""
+msgstr "Les commandes hors ligne ne sont pas reflétées dans les statistiques de l'événement tant que la commande n'est pas marquée comme payée."
 
 #: src/components/routes/product-widget/Payment/index.tsx:66
 msgid "Offline payment failed. Please try again or contact the event organizer."
-msgstr ""
+msgstr "Le paiement hors ligne a échoué. Veuillez réessayer ou contacter l'organisateur de l'événement."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:151
 msgid "Offline Payment Instructions"
-msgstr ""
+msgstr "Instructions pour le paiement hors ligne"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:90
 msgid "Offline Payments"
-msgstr ""
+msgstr "Paiements hors ligne"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:139
 msgid "Offline Payments Information"
-msgstr ""
+msgstr "Informations sur les paiements hors ligne"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:134
 msgid "Offline Payments Settings"
-msgstr ""
+msgstr "Paramètres des paiements hors ligne"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:69
 msgid "On sale"
@@ -2968,11 +2968,11 @@ msgstr "Option {i}"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:253
 msgid "Optional additional information to appear on all invoices (e.g., payment terms, late payment fees, return policy)"
-msgstr ""
+msgstr "Informations supplémentaires optionnelles à apparaître sur toutes les factures (par exemple, conditions de paiement, frais de retard, politique de retour)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:200
 msgid "Optional prefix for invoice numbers (e.g., INV-)"
-msgstr ""
+msgstr "Préfixe optionnel pour les numéros de facture (par exemple, INV-)"
 
 #: src/components/forms/QuestionForm/index.tsx:28
 msgid "Options"
@@ -3018,11 +3018,11 @@ msgstr "La commande a été annulée et le propriétaire de la commande a été 
 
 #: src/components/common/OrdersTable/index.tsx:82
 msgid "Order marked as paid"
-msgstr ""
+msgstr "Commande marquée comme payée"
 
 #: src/components/modals/ManageOrderModal/index.tsx:92
 msgid "Order Notes"
-msgstr ""
+msgstr "Notes de commande"
 
 #: src/components/common/QuestionsTable/index.tsx:292
 #: src/components/common/QuestionsTable/index.tsx:334
@@ -3035,7 +3035,7 @@ msgstr "Référence de l'achat"
 
 #: src/components/routes/event/orders.tsx:45
 msgid "Order Status"
-msgstr ""
+msgstr "Statut de la commande"
 
 #: src/components/layouts/Checkout/CheckoutSidebar/index.tsx:28
 #: src/components/modals/ManageOrderModal/index.tsx:105
@@ -3058,15 +3058,15 @@ msgstr "Ordres"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:235
 msgid "Organization Address"
-msgstr ""
+msgstr "Adresse de l'organisation"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:226
 msgid "Organization Details"
-msgstr ""
+msgstr "Détails de l'organisation"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:228
 msgid "Organization Name"
-msgstr ""
+msgstr "Nom de l'organisation"
 
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
@@ -3173,15 +3173,15 @@ msgstr "Paiement"
 
 #: src/components/routes/event/Settings/index.tsx:63
 msgid "Payment & Invoicing"
-msgstr ""
+msgstr "Paiement et facturation"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:98
 msgid "Payment & Invoicing Settings"
-msgstr ""
+msgstr "Paramètres de paiement et de facturation"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:216
 msgid "Payment Due Period"
-msgstr ""
+msgstr "Délai de paiement"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:41
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:64
@@ -3191,15 +3191,15 @@ msgstr "Paiement échoué"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:228
 #: src/components/routes/product-widget/Payment/PaymentMethods/Offline/index.tsx:14
 msgid "Payment Instructions"
-msgstr ""
+msgstr "Instructions de paiement"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:105
 msgid "Payment Methods"
-msgstr ""
+msgstr "Méthodes de paiement"
 
 #: src/components/common/OrderDetails/index.tsx:75
 msgid "Payment provider"
-msgstr ""
+msgstr "Fournisseur de paiement"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:42
 msgid "Payment Received"
@@ -3215,7 +3215,7 @@ msgstr "Paiement réussi !"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:214
 msgid "Payment Terms"
-msgstr ""
+msgstr "Conditions de paiement"
 
 #: src/components/forms/PromoCodeForm/index.tsx:51
 #: src/components/forms/TaxAndFeeForm/index.tsx:27
@@ -3609,7 +3609,7 @@ msgstr "Rapports"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:169
 msgid "Require Billing Address"
-msgstr ""
+msgstr "Adresse de facturation requise"
 
 #: src/components/routes/event/GettingStarted/index.tsx:140
 msgid "Resend confirmation email"
@@ -3641,7 +3641,7 @@ msgstr "Renvoi..."
 
 #: src/components/common/FilterModal/index.tsx:249
 msgid "Reset"
-msgstr ""
+msgstr "Réinitialiser"
 
 #: src/components/routes/auth/ResetPassword/index.tsx:62
 msgid "Reset password"
@@ -3758,7 +3758,7 @@ msgstr "Recherchez par nom, e-mail ou numéro de commande..."
 
 #: src/components/layouts/CheckIn/index.tsx:361
 msgid "Search by name, order #, attendee # or email..."
-msgstr ""
+msgstr "Rechercher par nom, numéro de commande, numéro de participant ou e-mail..."
 
 #: src/components/routes/event/promo-codes.tsx:34
 msgid "Search by name..."
@@ -3810,7 +3810,7 @@ msgstr "Couleur du texte secondaire"
 
 #: src/components/common/FilterModal/index.tsx:150
 msgid "Select {0}"
-msgstr ""
+msgstr "Sélectionner {0}"
 
 #: src/components/common/AttendeeCheckInTable/QrScanner.tsx:214
 msgid "Select Camera"
@@ -3924,7 +3924,7 @@ msgstr "Fixer un prix minimum et laisser les utilisateurs payer plus s'ils le so
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:207
 msgid "Set the starting number for invoice numbering. This cannot be changed once invoices have been generated."
-msgstr ""
+msgstr "Définir le numéro de départ pour la numérotation des factures. Cela ne peut pas être modifié une fois que les factures ont été générées."
 
 #: src/components/routes/event/GettingStarted/index.tsx:86
 msgid "Set up your event"
@@ -4134,11 +4134,11 @@ msgstr "Statut"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
-msgstr ""
+msgstr "Stripe"
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:48
 msgid "Stripe payments are not enabled for this event."
-msgstr ""
+msgstr "Les paiements Stripe ne sont pas activés pour cet événement."
 
 #: src/components/modals/SendMessageModal/index.tsx:180
 msgid "Subject"
@@ -4229,11 +4229,11 @@ msgstr "Paramètres divers mis à jour avec succès"
 
 #: src/components/modals/ManageOrderModal/index.tsx:74
 msgid "Successfully updated order"
-msgstr ""
+msgstr "Commande mise à jour avec succès"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:74
 msgid "Successfully Updated Payment & Invoicing Settings"
-msgstr ""
+msgstr "Paramètres de paiement et de facturation mis à jour avec succès"
 
 #: src/components/modals/EditProductModal/index.tsx:89
 msgid "Successfully updated product"
@@ -4261,7 +4261,7 @@ msgstr "E-mail d'assistance"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
-msgstr ""
+msgstr "T-shirt"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:12
 #: src/components/forms/TaxAndFeeForm/index.tsx:39
@@ -4280,11 +4280,11 @@ msgstr "Taxes et frais"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:243
 msgid "Tax Details"
-msgstr ""
+msgstr "Détails fiscaux"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:244
 msgid "Tax information to appear at the bottom of all invoices (e.g., VAT number, tax registration)"
-msgstr ""
+msgstr "Informations fiscales à apparaître en bas de toutes les factures (par exemple, numéro de TVA, enregistrement fiscal)"
 
 #: src/components/common/TaxAndFeeList/index.tsx:36
 msgid "Tax or Fee deleted successfully"
@@ -4384,7 +4384,7 @@ msgstr "Un remboursement est en attente. Veuillez attendre qu'il soit terminé a
 
 #: src/components/common/OrdersTable/index.tsx:88
 msgid "There was an error marking the order as paid"
-msgstr ""
+msgstr "Une erreur est survenue lors du marquage de la commande comme payée"
 
 #: src/hooks/useFormErrorResponseHandler.tsx:28
 msgid "There was an error processing your request. Please try again."
@@ -4396,7 +4396,7 @@ msgstr "Une erreur est survenue lors de l'envoi de votre message"
 
 #: src/components/layouts/CheckIn/index.tsx:166
 msgid "This attendee has an unpaid order."
-msgstr ""
+msgstr "Ce participant a une commande impayée."
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:61
 msgid "This category doesn't have any products yet."
@@ -4441,6 +4441,10 @@ msgstr "Cet événement n'est pas disponible pour le moment. Veuillez revenir pl
 #: src/components/layouts/EventHomepage/index.tsx:49
 msgid "This event is not available."
 msgstr "Cet événement n'est pas disponible."
+
+#: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
+#~ msgid "This information will be shown on the payment page, order summary page, and"
+#~ msgstr "Ces informations seront affichées sur la page de paiement, la page de résumé de commande et l'e-mail de confirmation de commande."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
 msgid "This information will be shown on the payment page, order summary page, and order confirmation email."
@@ -4795,7 +4799,7 @@ msgstr "Utilisations illimitées autorisées"
 
 #: src/components/layouts/CheckIn/index.tsx:165
 msgid "Unpaid Order"
-msgstr ""
+msgstr "Commande impayée"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5032,11 +5036,11 @@ msgstr "De quel type de question s'agit-il ?"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:182
 msgid "When enabled, invoices will be generated for ticket orders. Invoices will sent along with the order confirmation email. Attendees can also download their invoices from the order confirmation page."
-msgstr ""
+msgstr "Lorsque activé, des factures seront générées pour les commandes de billets. Les factures seront envoyées avec l'e-mail de confirmation de commande. Les participants peuvent également télécharger leurs factures depuis la page de confirmation de commande."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:141
 msgid "When offline payments are enabled, users will be able to complete their orders and receive their tickets. Their tickets will clearly indicate the order is not paid, and the check-in tool will notify the check-in staff if an order requires payment."
-msgstr ""
+msgstr "Lorsque les paiements hors ligne sont activés, les utilisateurs pourront finaliser leurs commandes et recevoir leurs billets. Leurs billets indiqueront clairement que la commande n'est pas payée, et l'outil d'enregistrement informera le personnel si une commande nécessite un paiement."
 
 #: src/components/forms/CheckInListForm/index.tsx:59
 msgid "When should this check-in list expire?"
@@ -5133,11 +5137,11 @@ msgstr "Vous ne pouvez pas changer le type de produit car des invités y sont as
 
 #: src/components/layouts/CheckIn/index.tsx:119
 msgid "You cannot check in attendees with unpaid orders."
-msgstr ""
+msgstr "Vous ne pouvez pas enregistrer des participants avec des commandes impayées."
 
 #: src/components/layouts/CheckIn/index.tsx:144
 msgid "You cannot check in attendees with unpaid orders. This setting can be changed in the event settings."
-msgstr ""
+msgstr "Vous ne pouvez pas enregistrer des participants avec des commandes impayées. Ce paramètre peut être modifié dans les paramètres de l'événement."
 
 #: src/components/common/ProductsTable/SortableCategory/index.tsx:40
 msgid "You cannot delete the last category."
@@ -5245,7 +5249,7 @@ msgstr "Vous devez vérifier votre compte avant de pouvoir envoyer des messages.
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:143
 msgid "You will have to mark an order as paid manually. This can be done on the manage order page."
-msgstr ""
+msgstr "Vous devrez marquer une commande comme payée manuellement. Cela peut être fait sur la page de gestion des commandes."
 
 #: src/components/modals/CreateCheckInListModal/index.tsx:55
 msgid "You'll need a ticket before you can create a check-in list."
@@ -5305,7 +5309,7 @@ msgstr "Votre commande a été annulée"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:96
 msgid "Your order is awaiting payment 🏦"
-msgstr ""
+msgstr "Votre commande est en attente de paiement 🏦"
 
 #: src/components/common/OrdersTable/index.tsx:67
 msgid "Your orders will appear here once they start rolling in."
@@ -5342,7 +5346,7 @@ msgstr "Votre billet pour"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:335
 msgid "ZIP / Postal Code"
-msgstr ""
+msgstr "Code postal"
 
 #: src/components/common/CheckoutQuestion/index.tsx:167
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:137
@@ -5351,4 +5355,4 @@ msgstr "Code Postal"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:336
 msgid "ZIP or Postal Code"
-msgstr ""
+msgstr "Code postal"
