--- a/frontend/src/locales/pt-br.po
+++ b/frontend/src/locales/pt-br.po
@@ -1934,20 +1934,20 @@ msgstr "Tarifas"
 
 #: src/components/routes/event/orders.tsx:109
 msgid "Filter Orders"
-msgstr ""
+msgstr "Filtrar pedidos"
 
 #: src/components/common/FilterModal/index.tsx:75
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters"
-msgstr ""
+msgstr "Filtros"
 
 #: src/components/common/FilterModal/index.tsx:223
 msgid "Filters ({activeFilterCount})"
-msgstr ""
+msgstr "Filtros ({activeFilterCount})"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:206
 msgid "First Invoice Number"
-msgstr ""
+msgstr "Primeiro número da fatura"
 
 #: src/components/common/QuestionsTable/index.tsx:206
 #: src/components/modals/CreateAttendeeModal/index.tsx:118
@@ -2234,11 +2234,11 @@ msgstr "Eu concordo com os <0>termos e condições</0>"
 
 #: src/components/routes/product-widget/Payment/index.tsx:106
 msgid "I would like to pay using an offline method"
-msgstr ""
+msgstr "Gostaria de pagar usando um método offline"
 
 #: src/components/routes/product-widget/Payment/index.tsx:107
 msgid "I would like to pay using an online method (credit card etc.)"
-msgstr ""
+msgstr "Gostaria de pagar usando um método online (cartão de crédito, etc.)"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:278
 msgid "If a new tab did not open, please  <0><1>{0}</1>.</0>"
@@ -2250,11 +2250,11 @@ msgstr "Se uma nova guia não foi aberta, por favor <0><1>{0}</1>.</0>"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:149
 msgid "If blank, the address will be used to generate a Google Mapa link"
-msgstr ""
+msgstr "Se estiver em branco, o endereço será usado para gerar um link do Google Maps"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:158
 msgid "If enabled, check-in staff can either mark attendees as checked in or mark the order as paid and check in the attendees. If disabled, attendees associated with unpaid orders cannot be checked in."
-msgstr ""
+msgstr "Se ativado, a equipe de check-in pode marcar os participantes como registrados ou marcar o pedido como pago e registrar os participantes. Se desativado, os participantes associados a pedidos não pagos não poderão ser registrados."
 
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:76
 msgid "If enabled, the organizer will receive an email notification when a new order is placed"
@@ -2355,15 +2355,15 @@ msgstr "Convidar usuário"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:252
 msgid "Invoice Notes"
-msgstr ""
+msgstr "Notas da fatura"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:197
 msgid "Invoice Numbering"
-msgstr ""
+msgstr "Numeração da fatura"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:177
 msgid "Invoice Settings"
-msgstr ""
+msgstr "Configurações da fatura"
 
 #: src/components/modals/RefundOrderModal/index.tsx:115
 msgid "Issue refund"
@@ -2457,7 +2457,7 @@ msgstr "Saiba mais sobre o Stripe"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:191
 msgid "Leave blank to use the default word \"Invoice\""
-msgstr ""
+msgstr "Deixe em branco para usar a palavra padrão \"Fatura\""
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
@@ -2496,7 +2496,7 @@ msgstr "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat el
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:170
 msgid "Make billing address mandatory during checkout"
-msgstr ""
+msgstr "Tornar o endereço de cobrança obrigatório durante o checkout"
 
 #: src/components/forms/QuestionForm/index.tsx:213
 msgid "Make this question mandatory"
@@ -2523,11 +2523,11 @@ msgstr "Gerenciar evento"
 
 #: src/components/common/OrdersTable/index.tsx:146
 msgid "Manage order"
-msgstr ""
+msgstr "Gerenciar pedido"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:99
 msgid "Manage payment and invoicing settings for this event."
-msgstr ""
+msgstr "Gerenciar as configurações de pagamento e faturamento para este evento."
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:106
 #~ msgid "Manage products"
@@ -2580,7 +2580,7 @@ msgstr "Adicionar participante manualmente"
 
 #: src/components/common/OrdersTable/index.tsx:157
 msgid "Mark as paid"
-msgstr ""
+msgstr "Marcar como pago"
 
 #: src/components/forms/ProductForm/index.tsx:383
 msgid "Maximum Per Order"
@@ -2768,7 +2768,7 @@ msgstr "Nenhum evento para mostrar"
 
 #: src/components/common/FilterModal/index.tsx:230
 msgid "No filters available"
-msgstr ""
+msgstr "Nenhum filtro disponível"
 
 #: src/components/common/MessageList/index.tsx:59
 msgid "No messages to show"
@@ -2780,7 +2780,7 @@ msgstr "Não há ordens para mostrar"
 
 #: src/components/routes/product-widget/Payment/index.tsx:76
 msgid "No payment methods are currently available. Please contact the event organizer for assistance."
-msgstr ""
+msgstr "Nenhum método de pagamento está disponível no momento. Entre em contato com o organizador do evento para obter assistência."
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:39
 msgid "No Payment Required"
@@ -2879,35 +2879,35 @@ msgstr "Agora vamos criar seu primeiro evento"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:217
 msgid "Number of days allowed for payment (leave blank to omit payment terms from invoices)"
-msgstr ""
+msgstr "Número de dias permitidos para pagamento (deixe em branco para omitir os termos de pagamento nas faturas)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:199
 msgid "Number Prefix"
-msgstr ""
+msgstr "Prefixo numérico"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:145
 msgid "Offline orders are not reflected in event statistics until the order is marked as paid."
-msgstr ""
+msgstr "Pedidos offline não são refletidos nas estatísticas do evento até que sejam marcados como pagos."
 
 #: src/components/routes/product-widget/Payment/index.tsx:66
 msgid "Offline payment failed. Please try again or contact the event organizer."
-msgstr ""
+msgstr "O pagamento offline falhou. Por favor, tente novamente ou entre em contato com o organizador do evento."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:151
 msgid "Offline Payment Instructions"
-msgstr ""
+msgstr "Instruções para pagamento offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:90
 msgid "Offline Payments"
-msgstr ""
+msgstr "Pagamentos offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:139
 msgid "Offline Payments Information"
-msgstr ""
+msgstr "Informações sobre pagamentos offline"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:134
 msgid "Offline Payments Settings"
-msgstr ""
+msgstr "Configurações de pagamentos offline"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:69
 msgid "On sale"
@@ -2968,11 +2968,11 @@ msgstr "Opção {i}"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:253
 msgid "Optional additional information to appear on all invoices (e.g., payment terms, late payment fees, return policy)"
-msgstr ""
+msgstr "Informações adicionais opcionais a serem exibidas em todas as faturas (ex.: condições de pagamento, taxas por atraso, política de devolução)"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:200
 msgid "Optional prefix for invoice numbers (e.g., INV-)"
-msgstr ""
+msgstr "Prefixo opcional para os números das faturas (ex.: INV-)"
 
 #: src/components/forms/QuestionForm/index.tsx:28
 msgid "Options"
@@ -3018,11 +3018,11 @@ msgstr "O pedido foi cancelado e o proprietário do pedido foi notificado."
 
 #: src/components/common/OrdersTable/index.tsx:82
 msgid "Order marked as paid"
-msgstr ""
+msgstr "Pedido marcado como pago"
 
 #: src/components/modals/ManageOrderModal/index.tsx:92
 msgid "Order Notes"
-msgstr ""
+msgstr "Notas do pedido"
 
 #: src/components/common/QuestionsTable/index.tsx:292
 #: src/components/common/QuestionsTable/index.tsx:334
@@ -3035,7 +3035,7 @@ msgstr "Referência do pedido"
 
 #: src/components/routes/event/orders.tsx:45
 msgid "Order Status"
-msgstr ""
+msgstr "Status do pedido"
 
 #: src/components/layouts/Checkout/CheckoutSidebar/index.tsx:28
 #: src/components/modals/ManageOrderModal/index.tsx:105
@@ -3058,15 +3058,15 @@ msgstr "Pedidos"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:235
 msgid "Organization Address"
-msgstr ""
+msgstr "Endereço da organização"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:226
 msgid "Organization Details"
-msgstr ""
+msgstr "Detalhes da organização"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:228
 msgid "Organization Name"
-msgstr ""
+msgstr "Nome da organização"
 
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
@@ -3173,15 +3173,15 @@ msgstr "Pagamento"
 
 #: src/components/routes/event/Settings/index.tsx:63
 msgid "Payment & Invoicing"
-msgstr ""
+msgstr "Pagamento e faturamento"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:98
 msgid "Payment & Invoicing Settings"
-msgstr ""
+msgstr "Configurações de pagamento e faturamento"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:216
 msgid "Payment Due Period"
-msgstr ""
+msgstr "Prazo para pagamento"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:41
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:64
@@ -3191,15 +3191,15 @@ msgstr "Falha no pagamento"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:228
 #: src/components/routes/product-widget/Payment/PaymentMethods/Offline/index.tsx:14
 msgid "Payment Instructions"
-msgstr ""
+msgstr "Instruções de pagamento"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:105
 msgid "Payment Methods"
-msgstr ""
+msgstr "Métodos de pagamento"
 
 #: src/components/common/OrderDetails/index.tsx:75
 msgid "Payment provider"
-msgstr ""
+msgstr "Provedor de pagamento"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:42
 msgid "Payment Received"
@@ -3215,7 +3215,7 @@ msgstr "O pagamento foi bem-sucedido!"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:214
 msgid "Payment Terms"
-msgstr ""
+msgstr "Termos de pagamento"
 
 #: src/components/forms/PromoCodeForm/index.tsx:51
 #: src/components/forms/TaxAndFeeForm/index.tsx:27
@@ -3609,7 +3609,7 @@ msgstr "Relatórios"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:169
 msgid "Require Billing Address"
-msgstr ""
+msgstr "Exigir endereço de cobrança"
 
 #: src/components/routes/event/GettingStarted/index.tsx:140
 msgid "Resend confirmation email"
@@ -3641,7 +3641,7 @@ msgstr "Reenvio..."
 
 #: src/components/common/FilterModal/index.tsx:249
 msgid "Reset"
-msgstr ""
+msgstr "Redefinir"
 
 #: src/components/routes/auth/ResetPassword/index.tsx:62
 msgid "Reset password"
@@ -3758,7 +3758,7 @@ msgstr "Pesquise por nome, e-mail ou número do pedido..."
 
 #: src/components/layouts/CheckIn/index.tsx:361
 msgid "Search by name, order #, attendee # or email..."
-msgstr ""
+msgstr "Pesquise por nome, número do pedido, número do participante ou e-mail..."
 
 #: src/components/routes/event/promo-codes.tsx:34
 msgid "Search by name..."
@@ -3810,7 +3810,7 @@ msgstr "Cor do texto secundário"
 
 #: src/components/common/FilterModal/index.tsx:150
 msgid "Select {0}"
-msgstr ""
+msgstr "Selecionar {0}"
 
 #: src/components/common/AttendeeCheckInTable/QrScanner.tsx:214
 msgid "Select Camera"
@@ -3924,7 +3924,7 @@ msgstr "Defina um preço mínimo e permita que os usuários paguem mais se quise
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:207
 msgid "Set the starting number for invoice numbering. This cannot be changed once invoices have been generated."
-msgstr ""
+msgstr "Defina o número inicial para a numeração das faturas. Isso não poderá ser alterado depois que as faturas forem geradas."
 
 #: src/components/routes/event/GettingStarted/index.tsx:86
 msgid "Set up your event"
@@ -4134,11 +4134,11 @@ msgstr "Status"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
-msgstr ""
+msgstr "Stripe"
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:48
 msgid "Stripe payments are not enabled for this event."
-msgstr ""
+msgstr "Os pagamentos via Stripe não estão ativados para este evento."
 
 #: src/components/modals/SendMessageModal/index.tsx:180
 msgid "Subject"
@@ -4229,11 +4229,11 @@ msgstr "Configurações diversas atualizadas com sucesso"
 
 #: src/components/modals/ManageOrderModal/index.tsx:74
 msgid "Successfully updated order"
-msgstr ""
+msgstr "Pedido atualizado com sucesso"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:74
 msgid "Successfully Updated Payment & Invoicing Settings"
-msgstr ""
+msgstr "Configurações de pagamento e faturamento atualizadas com sucesso"
 
 #: src/components/modals/EditProductModal/index.tsx:89
 msgid "Successfully updated product"
@@ -4261,7 +4261,7 @@ msgstr "E-mail de suporte"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
-msgstr ""
+msgstr "Camiseta"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:12
 #: src/components/forms/TaxAndFeeForm/index.tsx:39
@@ -4280,11 +4280,11 @@ msgstr "Impostos e taxas"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:243
 msgid "Tax Details"
-msgstr ""
+msgstr "Detalhes fiscais"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:244
 msgid "Tax information to appear at the bottom of all invoices (e.g., VAT number, tax registration)"
-msgstr ""
+msgstr "Informações fiscais que aparecerão na parte inferior de todas as faturas (ex.: número de IVA, registro fiscal)"
 
 #: src/components/common/TaxAndFeeList/index.tsx:36
 msgid "Tax or Fee deleted successfully"
@@ -4384,7 +4384,7 @@ msgstr "Há um reembolso pendente. Aguarde a conclusão do processo antes de sol
 
 #: src/components/common/OrdersTable/index.tsx:88
 msgid "There was an error marking the order as paid"
-msgstr ""
+msgstr "Ocorreu um erro ao marcar o pedido como pago"
 
 #: src/hooks/useFormErrorResponseHandler.tsx:28
 msgid "There was an error processing your request. Please try again."
@@ -4396,7 +4396,7 @@ msgstr "Ocorreu um erro ao enviar sua mensagem"
 
 #: src/components/layouts/CheckIn/index.tsx:166
 msgid "This attendee has an unpaid order."
-msgstr ""
+msgstr "Este participante tem um pedido não pago."
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:61
 msgid "This category doesn't have any products yet."
@@ -4444,7 +4444,7 @@ msgstr "Esse evento não está disponível."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
 msgid "This information will be shown on the payment page, order summary page, and order confirmation email."
-msgstr ""
+msgstr "Estas informações serão exibidas na página de pagamento, na página de resumo do pedido e no e-mail de confirmação do pedido."
 
 #: src/components/forms/ProductForm/index.tsx:138
 msgid "This is a general product, like a t-shirt or a mug. No ticket will be issued"
@@ -4795,7 +4795,7 @@ msgstr "Permite usos ilimitados"
 
 #: src/components/layouts/CheckIn/index.tsx:165
 msgid "Unpaid Order"
-msgstr ""
+msgstr "Pedido não pago"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5032,11 +5032,11 @@ msgstr "Que tipo de pergunta é essa?"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:182
 msgid "When enabled, invoices will be generated for ticket orders. Invoices will sent along with the order confirmation email. Attendees can also download their invoices from the order confirmation page."
-msgstr ""
+msgstr "Quando ativado, as faturas serão geradas para os pedidos de ingressos. As faturas serão enviadas junto com o e-mail de confirmação do pedido. Os participantes também podem baixar suas faturas na página de confirmação do pedido."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:141
 msgid "When offline payments are enabled, users will be able to complete their orders and receive their tickets. Their tickets will clearly indicate the order is not paid, and the check-in tool will notify the check-in staff if an order requires payment."
-msgstr ""
+msgstr "Quando os pagamentos offline estão ativados, os usuários poderão concluir seus pedidos e receber seus ingressos. Seus ingressos indicarão claramente que o pedido não foi pago, e a ferramenta de check-in notificará a equipe se um pedido exigir pagamento."
 
 #: src/components/forms/CheckInListForm/index.tsx:59
 msgid "When should this check-in list expire?"
@@ -5133,11 +5133,11 @@ msgstr "Você não pode mudar o tipo de produto, pois há participantes associad
 
 #: src/components/layouts/CheckIn/index.tsx:119
 msgid "You cannot check in attendees with unpaid orders."
-msgstr ""
+msgstr "Você não pode registrar participantes com pedidos não pagos."
 
 #: src/components/layouts/CheckIn/index.tsx:144
 msgid "You cannot check in attendees with unpaid orders. This setting can be changed in the event settings."
-msgstr ""
+msgstr "Você não pode registrar participantes com pedidos não pagos. Essa configuração pode ser alterada nas configurações do evento."
 
 #: src/components/common/ProductsTable/SortableCategory/index.tsx:40
 msgid "You cannot delete the last category."
@@ -5245,7 +5245,7 @@ msgstr "Você precisa verificar sua conta para poder enviar mensagens."
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:143
 msgid "You will have to mark an order as paid manually. This can be done on the manage order page."
-msgstr ""
+msgstr "Você terá que marcar um pedido como pago manualmente. Isso pode ser feito na página de gerenciamento de pedidos."
 
 #: src/components/modals/CreateCheckInListModal/index.tsx:55
 msgid "You'll need a ticket before you can create a check-in list."
@@ -5305,7 +5305,7 @@ msgstr "Seu pedido foi cancelado"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:96
 msgid "Your order is awaiting payment 🏦"
-msgstr ""
+msgstr "Seu pedido está aguardando pagamento 🏦"
 
 #: src/components/common/OrdersTable/index.tsx:67
 msgid "Your orders will appear here once they start rolling in."
@@ -5342,7 +5342,7 @@ msgstr "Seu ingresso para"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:335
 msgid "ZIP / Postal Code"
-msgstr ""
+msgstr "CEP / Código Postal"
 
 #: src/components/common/CheckoutQuestion/index.tsx:167
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:137
@@ -5351,4 +5351,4 @@ msgstr "CEP ou código postal"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:336
 msgid "ZIP or Postal Code"
-msgstr ""
+msgstr "CEP ou Código Postal"
