--- a/frontend/src/locales/zh-cn.po
+++ b/frontend/src/locales/zh-cn.po
@@ -2250,11 +2250,11 @@ msgstr "如果新标签页没有打开，请<0><1>{0}</1>.</0>。"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:149
 msgid "If blank, the address will be used to generate a Google Mapa link"
-msgstr ""
+msgstr "如果为空，将使用地址生成 Google 地图链接"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:158
 msgid "If enabled, check-in staff can either mark attendees as checked in or mark the order as paid and check in the attendees. If disabled, attendees associated with unpaid orders cannot be checked in."
-msgstr ""
+msgstr "如果启用，登记工作人员可以将与会者标记为已登记或将订单标记为已支付并登记与会者。如果禁用，关联未支付订单的与会者无法登记。"
 
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:76
 msgid "If enabled, the organizer will receive an email notification when a new order is placed"
@@ -2355,15 +2355,15 @@ msgstr "邀请用户"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:252
 msgid "Invoice Notes"
-msgstr ""
+msgstr "发票备注"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:197
 msgid "Invoice Numbering"
-msgstr ""
+msgstr "发票编号"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:177
 msgid "Invoice Settings"
-msgstr ""
+msgstr "发票设置"
 
 #: src/components/modals/RefundOrderModal/index.tsx:115
 msgid "Issue refund"
@@ -2457,7 +2457,7 @@ msgstr "进一步了解 Stripe"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:191
 msgid "Leave blank to use the default word \"Invoice\""
-msgstr ""
+msgstr "留空以使用默认词“发票”"
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
@@ -2496,7 +2496,7 @@ msgstr "Lorem ipsum dolor sit amet, consectetur adipiscing elit.Nam placerat ele
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:170
 msgid "Make billing address mandatory during checkout"
-msgstr ""
+msgstr "在结账时强制要求填写账单地址"
 
 #: src/components/forms/QuestionForm/index.tsx:213
 msgid "Make this question mandatory"
@@ -2523,11 +2523,11 @@ msgstr "管理活动"
 
 #: src/components/common/OrdersTable/index.tsx:146
 msgid "Manage order"
-msgstr ""
+msgstr "管理订单"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:99
 msgid "Manage payment and invoicing settings for this event."
-msgstr ""
+msgstr "管理此活动的支付和发票设置。"
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:106
 #~ msgid "Manage products"
@@ -2580,7 +2580,7 @@ msgstr "手动添加与会者"
 
 #: src/components/common/OrdersTable/index.tsx:157
 msgid "Mark as paid"
-msgstr ""
+msgstr "标记为已支付"
 
 #: src/components/forms/ProductForm/index.tsx:383
 msgid "Maximum Per Order"
@@ -2768,7 +2768,7 @@ msgstr "无事件显示"
 
 #: src/components/common/FilterModal/index.tsx:230
 msgid "No filters available"
-msgstr ""
+msgstr "没有可用筛选器"
 
 #: src/components/common/MessageList/index.tsx:59
 msgid "No messages to show"
@@ -2780,7 +2780,7 @@ msgstr "无订单显示"
 
 #: src/components/routes/product-widget/Payment/index.tsx:76
 msgid "No payment methods are currently available. Please contact the event organizer for assistance."
-msgstr ""
+msgstr "当前没有可用的支付方式。请联系活动组织者以获取帮助。"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:39
 msgid "No Payment Required"
@@ -2879,35 +2879,35 @@ msgstr "现在，让我们创建第一个事件"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:217
 msgid "Number of days allowed for payment (leave blank to omit payment terms from invoices)"
-msgstr ""
+msgstr "允许支付的天数（留空以从发票中省略付款条款）"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:199
 msgid "Number Prefix"
-msgstr ""
+msgstr "号码前缀"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:145
 msgid "Offline orders are not reflected in event statistics until the order is marked as paid."
-msgstr ""
+msgstr "线下订单在标记为已支付之前不会反映在活动统计中。"
 
 #: src/components/routes/product-widget/Payment/index.tsx:66
 msgid "Offline payment failed. Please try again or contact the event organizer."
-msgstr ""
+msgstr "线下支付失败。请重试或联系活动组织者。"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:151
 msgid "Offline Payment Instructions"
-msgstr ""
+msgstr "线下支付说明"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:90
 msgid "Offline Payments"
-msgstr ""
+msgstr "线下支付"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:139
 msgid "Offline Payments Information"
-msgstr ""
+msgstr "线下支付信息"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:134
 msgid "Offline Payments Settings"
-msgstr ""
+msgstr "线下支付设置"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:69
 msgid "On sale"
@@ -2968,11 +2968,11 @@ msgstr "方案 {i}"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:253
 msgid "Optional additional information to appear on all invoices (e.g., payment terms, late payment fees, return policy)"
-msgstr ""
+msgstr "所有发票上显示的可选附加信息（例如，付款条款、逾期付款费用、退货政策）"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:200
 msgid "Optional prefix for invoice numbers (e.g., INV-)"
-msgstr ""
+msgstr "发票编号的可选前缀（例如，INV-）"
 
 #: src/components/forms/QuestionForm/index.tsx:28
 msgid "Options"
@@ -3018,11 +3018,11 @@ msgstr "订单已取消，并已通知订单所有者。"
 
 #: src/components/common/OrdersTable/index.tsx:82
 msgid "Order marked as paid"
-msgstr ""
+msgstr "订单已标记为已支付"
 
 #: src/components/modals/ManageOrderModal/index.tsx:92
 msgid "Order Notes"
-msgstr ""
+msgstr "订单备注"
 
 #: src/components/common/QuestionsTable/index.tsx:292
 #: src/components/common/QuestionsTable/index.tsx:334
@@ -3035,7 +3035,7 @@ msgstr "订购参考"
 
 #: src/components/routes/event/orders.tsx:45
 msgid "Order Status"
-msgstr ""
+msgstr "订单状态"
 
 #: src/components/layouts/Checkout/CheckoutSidebar/index.tsx:28
 #: src/components/modals/ManageOrderModal/index.tsx:105
@@ -3058,15 +3058,15 @@ msgstr "订单"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:235
 msgid "Organization Address"
-msgstr ""
+msgstr "组织地址"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:226
 msgid "Organization Details"
-msgstr ""
+msgstr "组织详细信息"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:228
 msgid "Organization Name"
-msgstr ""
+msgstr "组织名称"
 
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
@@ -3173,15 +3173,15 @@ msgstr "付款方式"
 
 #: src/components/routes/event/Settings/index.tsx:63
 msgid "Payment & Invoicing"
-msgstr ""
+msgstr "支付和发票"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:98
 msgid "Payment & Invoicing Settings"
-msgstr ""
+msgstr "支付和发票设置"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:216
 msgid "Payment Due Period"
-msgstr ""
+msgstr "付款期限"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:41
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:64
@@ -3191,15 +3191,15 @@ msgstr "付款失败"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:228
 #: src/components/routes/product-widget/Payment/PaymentMethods/Offline/index.tsx:14
 msgid "Payment Instructions"
-msgstr ""
+msgstr "支付说明"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:105
 msgid "Payment Methods"
-msgstr ""
+msgstr "支付方式"
 
 #: src/components/common/OrderDetails/index.tsx:75
 msgid "Payment provider"
-msgstr ""
+msgstr "支付提供商"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:42
 msgid "Payment Received"
@@ -3215,7 +3215,7 @@ msgstr "付款成功！"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:214
 msgid "Payment Terms"
-msgstr ""
+msgstr "付款条款"
 
 #: src/components/forms/PromoCodeForm/index.tsx:51
 #: src/components/forms/TaxAndFeeForm/index.tsx:27
@@ -3609,7 +3609,7 @@ msgstr "报告"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:169
 msgid "Require Billing Address"
-msgstr ""
+msgstr "要求账单地址"
 
 #: src/components/routes/event/GettingStarted/index.tsx:140
 msgid "Resend confirmation email"
@@ -3641,7 +3641,7 @@ msgstr "重新发送..."
 
 #: src/components/common/FilterModal/index.tsx:249
 msgid "Reset"
-msgstr ""
+msgstr "重置"
 
 #: src/components/routes/auth/ResetPassword/index.tsx:62
 msgid "Reset password"
@@ -3758,7 +3758,7 @@ msgstr "按姓名、电子邮件或订单号搜索..."
 
 #: src/components/layouts/CheckIn/index.tsx:361
 msgid "Search by name, order #, attendee # or email..."
-msgstr ""
+msgstr "按姓名、订单号、参与者号或电子邮件搜索..."
 
 #: src/components/routes/event/promo-codes.tsx:34
 msgid "Search by name..."
@@ -3810,7 +3810,7 @@ msgstr "辅助文字颜色"
 
 #: src/components/common/FilterModal/index.tsx:150
 msgid "Select {0}"
-msgstr ""
+msgstr "选择 {0}"
 
 #: src/components/common/AttendeeCheckInTable/QrScanner.tsx:214
 msgid "Select Camera"
@@ -3924,7 +3924,7 @@ msgstr "设定最低价格，用户可选择支付更高的价格"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:207
 msgid "Set the starting number for invoice numbering. This cannot be changed once invoices have been generated."
-msgstr ""
+msgstr "设置发票编号的起始编号。一旦发票生成，就无法更改。"
 
 #: src/components/routes/event/GettingStarted/index.tsx:86
 msgid "Set up your event"
@@ -4134,11 +4134,11 @@ msgstr "现状"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
-msgstr ""
+msgstr "Stripe"
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:48
 msgid "Stripe payments are not enabled for this event."
-msgstr ""
+msgstr "此活动未启用 Stripe 支付。"
 
 #: src/components/modals/SendMessageModal/index.tsx:180
 msgid "Subject"
@@ -4229,11 +4229,11 @@ msgstr "成功更新杂项设置"
 
 #: src/components/modals/ManageOrderModal/index.tsx:74
 msgid "Successfully updated order"
-msgstr ""
+msgstr "订单更新成功"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:74
 msgid "Successfully Updated Payment & Invoicing Settings"
-msgstr ""
+msgstr "支付和发票设置已成功更新"
 
 #: src/components/modals/EditProductModal/index.tsx:89
 msgid "Successfully updated product"
@@ -4261,7 +4261,7 @@ msgstr "支持电子邮件"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
-msgstr ""
+msgstr "T恤衫"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:12
 #: src/components/forms/TaxAndFeeForm/index.tsx:39
@@ -4280,11 +4280,11 @@ msgstr "税费"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:243
 msgid "Tax Details"
-msgstr ""
+msgstr "税务详情"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:244
 msgid "Tax information to appear at the bottom of all invoices (e.g., VAT number, tax registration)"
-msgstr ""
+msgstr "所有发票底部显示的税务信息（例如，增值税号、税务注册号）"
 
 #: src/components/common/TaxAndFeeList/index.tsx:36
 msgid "Tax or Fee deleted successfully"
@@ -4384,7 +4384,7 @@ msgstr "退款正在处理中。请等待退款完成后再申请退款。"
 
 #: src/components/common/OrdersTable/index.tsx:88
 msgid "There was an error marking the order as paid"
-msgstr ""
+msgstr "标记订单为已支付时出错"
 
 #: src/hooks/useFormErrorResponseHandler.tsx:28
 msgid "There was an error processing your request. Please try again."
@@ -4396,7 +4396,7 @@ msgstr "发送信息时出现错误"
 
 #: src/components/layouts/CheckIn/index.tsx:166
 msgid "This attendee has an unpaid order."
-msgstr ""
+msgstr "此与会者有未支付的订单。"
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:61
 msgid "This category doesn't have any products yet."
@@ -4444,7 +4444,7 @@ msgstr "此活动不可用。"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:152
 msgid "This information will be shown on the payment page, order summary page, and order confirmation email."
-msgstr ""
+msgstr "此信息将显示在支付页面、订单摘要页面和订单确认电子邮件中。"
 
 #: src/components/forms/ProductForm/index.tsx:138
 msgid "This is a general product, like a t-shirt or a mug. No ticket will be issued"
@@ -4795,7 +4795,7 @@ msgstr "允许无限次使用"
 
 #: src/components/layouts/CheckIn/index.tsx:165
 msgid "Unpaid Order"
-msgstr ""
+msgstr "未支付订单"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5032,11 +5032,11 @@ msgstr "这是什么类型的问题？"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:182
 msgid "When enabled, invoices will be generated for ticket orders. Invoices will sent along with the order confirmation email. Attendees can also download their invoices from the order confirmation page."
-msgstr ""
+msgstr "启用后，将为票务订单生成发票。发票将随订单确认邮件一起发送。参与"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:141
 msgid "When offline payments are enabled, users will be able to complete their orders and receive their tickets. Their tickets will clearly indicate the order is not paid, and the check-in tool will notify the check-in staff if an order requires payment."
-msgstr ""
+msgstr "启用线下支付后，用户可以完成订单并收到门票。他们的门票将清楚地显示订单未支付，签到工具会通知签到工作人员订单是否需要支付。"
 
 #: src/components/forms/CheckInListForm/index.tsx:59
 msgid "When should this check-in list expire?"
@@ -5133,11 +5133,11 @@ msgstr "您无法更改产品类型，因为有与该产品关联的参会者。
 
 #: src/components/layouts/CheckIn/index.tsx:119
 msgid "You cannot check in attendees with unpaid orders."
-msgstr ""
+msgstr "您无法为未支付订单的与会者签到。"
 
 #: src/components/layouts/CheckIn/index.tsx:144
 msgid "You cannot check in attendees with unpaid orders. This setting can be changed in the event settings."
-msgstr ""
+msgstr "您无法为未支付订单的与会者签到。此设置可在活动设置中更改。"
 
 #: src/components/common/ProductsTable/SortableCategory/index.tsx:40
 msgid "You cannot delete the last category."
@@ -5245,7 +5245,7 @@ msgstr "发送信息前，您需要验证您的账户。"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:143
 msgid "You will have to mark an order as paid manually. This can be done on the manage order page."
-msgstr ""
+msgstr "您必须手动将订单标记为已支付。这可以在订单管理页面上完成。"
 
 #: src/components/modals/CreateCheckInListModal/index.tsx:55
 msgid "You'll need a ticket before you can create a check-in list."
@@ -5305,7 +5305,7 @@ msgstr "您的订单已被取消"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:96
 msgid "Your order is awaiting payment 🏦"
-msgstr ""
+msgstr "您的订单正在等待支付 🏦"
 
 #: src/components/common/OrdersTable/index.tsx:67
 msgid "Your orders will appear here once they start rolling in."
@@ -5342,7 +5342,7 @@ msgstr "您的入场券"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:335
 msgid "ZIP / Postal Code"
-msgstr ""
+msgstr "邮政编码"
 
 #: src/components/common/CheckoutQuestion/index.tsx:167
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:137
@@ -5351,4 +5351,4 @@ msgstr "邮政编码"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:336
 msgid "ZIP or Postal Code"
-msgstr ""
+msgstr "邮政编码"
