--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -15,7 +15,7 @@ msgstr ""
 
 #: src/components/common/NoResultsSplash/index.tsx:14
 msgid "'There\\'s nothing to show yet'"
-msgstr "„Es gibt noch nichts zu zeigen“"
+msgstr "„Hier gibt es noch nichts zu sehen“"
 
 #: src/locales.ts:51
 msgid "{0}"
@@ -63,7 +63,7 @@ msgstr "{hours} Stunden, {minutes} Minuten und {seconds} Sekunden"
 
 #: src/components/common/Countdown/index.tsx:42
 msgid "{minutes} minutes and {seconds} seconds"
-msgstr "{Minuten} Minuten und {Sekunden} Sekunden"
+msgstr "{minutes} Minuten und {seconds} Sekunden"
 
 #: src/components/routes/welcome/index.tsx:59
 msgid "{organizerName}'s first event"
@@ -107,7 +107,7 @@ msgstr "🎟️ Tickets hinzufügen"
 
 #: src/components/routes/event/GettingStarted/index.tsx:92
 msgid "🎨 Customize your event page"
-msgstr "🎨 Passen Sie Ihre Veranstaltungsseite an"
+msgstr "🎨 Veranstaltungsseite anpassen"
 
 #: src/components/routes/event/GettingStarted/index.tsx:119
 msgid "💳 Connect with Stripe"
@@ -115,7 +115,7 @@ msgstr "💳 Mit Stripe verbinden"
 
 #: src/components/routes/event/GettingStarted/index.tsx:105
 msgid "🚀 Set your event live"
-msgstr "🚀 Setze dein Event live"
+msgstr "🚀 Veröffentliche dein Event"
 
 #: src/components/common/Countdown/index.tsx:26
 msgid "0 minutes and 0 seconds"
@@ -127,7 +127,7 @@ msgstr "10.00"
 
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:114
 msgid "123 Main Street"
-msgstr "123 Hauptstraße"
+msgstr "Hauptstraße 123"
 
 #: src/components/common/WidgetEditor/index.tsx:226
 msgid "20"
@@ -147,7 +147,7 @@ msgstr "94103"
 
 #: src/components/forms/QuestionForm/index.tsx:137
 msgid "A date input. Perfect for asking for a date of birth etc."
-msgstr "Ein Datumseingabefeld. Perfekt, um nach einem Geburtsdatum usw. zu fragen."
+msgstr "Ein Datumseingabefeld. Perfekt, um nach einem Geburtsdatum o.ä. zu fragen."
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:88
 msgid "A default {type} is automaticaly applied to all new tickets. You can override this on a per ticket basis."
@@ -163,7 +163,7 @@ msgstr "Eine Gebühr, beispielsweise eine Buchungsgebühr oder eine Servicegebü
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:35
 msgid "A fixed amount per ticket. E.g, $0.50 per ticket"
-msgstr "Ein fester Betrag pro Ticket. Z. B. 0,50 $ pro Ticket"
+msgstr "Ein fester Betrag pro Ticket. Z. B. 0,50 € pro Ticket"
 
 #: src/components/forms/QuestionForm/index.tsx:107
 msgid "A multi line text input"
@@ -207,7 +207,7 @@ msgstr "Über die Veranstaltung"
 
 #: src/components/routes/auth/AcceptInvitation/index.tsx:116
 msgid "Accept Invitation"
-msgstr "Die Einladung annehmen"
+msgstr "Einladung annehmen"
 
 #: src/components/routes/account/ManageAccount/index.tsx:24
 #: src/components/routes/account/ManageAccount/sections/AccountSettings/index.tsx:53
@@ -235,7 +235,7 @@ msgstr "Aktionen"
 
 #: src/components/common/AttendeeTable/index.tsx:190
 msgid "Activate"
-msgstr "aktivieren Sie"
+msgstr "Aktivieren"
 
 #: src/components/forms/CheckInListForm/index.tsx:53
 msgid "Activation date"
@@ -802,11 +802,11 @@ msgstr "Bestellung abschließen"
 
 #: src/components/routes/ticket-widget/CollectInformation/index.tsx:197
 msgid "Complete payment"
-msgstr "Zur vollständigen Bezahlung"
+msgstr "Jetzt bezahlen"
 
 #: src/components/forms/StripeCheckoutForm/index.tsx:143
 msgid "Complete Payment"
-msgstr "Zur vollständigen Bezahlung"
+msgstr "Jetzt bezahlen"
 
 #: src/components/routes/event/GettingStarted/index.tsx:43
 msgid "Completed"
@@ -913,7 +913,7 @@ msgstr "Eincheck-URL kopieren"
 
 #: src/components/routes/ticket-widget/CollectInformation/index.tsx:291
 msgid "Copy details to all attendees"
-msgstr "Details an alle Teilnehmer kopieren"
+msgstr "Details auf alle Teilnehmer anwenden"
 
 #: src/components/common/AttendeeTicket/index.tsx:84
 msgid "Copy Link"
@@ -981,7 +981,7 @@ msgstr "Ereignis erstellen"
 
 #: src/components/routes/events/Dashboard/index.tsx:91
 msgid "Create new"
-msgstr "Erstelle neu"
+msgstr "Neu erstellen"
 
 #: src/components/forms/OrganizerForm/index.tsx:110
 #: src/components/modals/CreateEventModal/index.tsx:94
@@ -991,7 +991,7 @@ msgstr "Organizer erstellen"
 
 #: src/components/routes/event/products.tsx:50
 #~ msgid "Create Product"
-#~ msgstr ""
+#~ msgstr "Produkt erstellen"
 
 #: src/components/modals/CreatePromoCodeModal/index.tsx:51
 #: src/components/modals/CreatePromoCodeModal/index.tsx:56
@@ -1079,7 +1079,7 @@ msgstr "Gefahrenzone"
 
 #: src/components/layouts/Event/index.tsx:38
 msgid "Dashboard"
-msgstr "Armaturenbrett"
+msgstr "Dashboard"
 
 #: src/components/common/OrderDetails/index.tsx:31
 #: src/components/forms/QuestionForm/index.tsx:135
@@ -1088,7 +1088,7 @@ msgstr "Datum"
 
 #: src/components/layouts/EventHomepage/EventInformation/index.tsx:40
 msgid "Date & Time"
-msgstr "Terminzeit"
+msgstr "Datum & Uhrzeit"
 
 #: src/components/forms/CapaciyAssigmentForm/index.tsx:37
 msgid "Day one capacity"
@@ -1893,7 +1893,7 @@ msgstr "Letzte Anmeldung"
 #: src/components/modals/CreateAttendeeModal/index.tsx:121
 #: src/components/modals/EditAttendeeModal/index.tsx:84
 msgid "Last name"
-msgstr "Familienname, Nachname"
+msgstr "Nachname"
 
 #: src/components/common/QuestionsTable/index.tsx:210
 #: src/components/common/QuestionsTable/index.tsx:211
@@ -1907,7 +1907,7 @@ msgstr "Familienname, Nachname"
 #: src/components/routes/ticket-widget/CollectInformation/index.tsx:320
 #: src/components/routes/ticket-widget/CollectInformation/index.tsx:321
 msgid "Last Name"
-msgstr "Familienname, Nachname"
+msgstr "Nachname"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:56
 msgid "Learn more about Stripe"
@@ -1924,7 +1924,7 @@ msgstr "Standort"
 
 #: src/components/routes/auth/Login/index.tsx:66
 msgid "Log in"
-msgstr "Anmeldung"
+msgstr "Anmelden"
 
 #: src/components/routes/auth/Login/index.tsx:66
 msgid "Logging in"
@@ -1932,7 +1932,7 @@ msgstr "Einloggen"
 
 #: src/components/routes/auth/Register/index.tsx:53
 msgid "Login"
-msgstr "Anmeldung"
+msgstr "Anmelden"
 
 #: src/components/common/GlobalMenu/index.tsx:47
 msgid "Logout"
@@ -2515,7 +2515,7 @@ msgstr "Checkout-Nachricht veröffentlichen"
 
 #: src/components/common/PoweredByFooter/index.tsx:28
 msgid "Powered by"
-msgstr "Angetrieben von"
+msgstr "Powered by"
 
 #: src/components/forms/StripeCheckoutForm/index.tsx:136
 msgid "Powered by Stripe"
@@ -2942,7 +2942,7 @@ msgstr "Einstellungen"
 
 #: src/components/common/ShareIcon/index.tsx:53
 msgid "Share"
-msgstr "Aktie"
+msgstr "Teilen"
 
 #: src/components/forms/TicketForm/index.tsx:289
 msgid "Show"
